Update GitHub and LinkedIn links in index.html

--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
 
         <div class="hero-actions">
           <!-- Replace # with your actual GitHub + LinkedIn URLs -->
-          <a href="https://github.com/your-github-handle" class="btn btn-primary" target="_blank" rel="noreferrer">
+          <a href="https://github.com/deannaconti" class="btn btn-primary" target="_blank" rel="noreferrer">
             View GitHub
           </a>
-          <a href="https://www.linkedin.com/in/your-linkedin-handle" class="btn btn-ghost" target="_blank" rel="noreferrer">
+          <a href="https://www.linkedin.com/in/deanna-conti/" class="btn btn-ghost" target="_blank" rel="noreferrer">
             Connect on LinkedIn
           </a>
         </div>
