Fix LinkedIn URL in index.html

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <a href="https://github.com/deannaconti" class="btn btn-primary" target="_blank" rel="noreferrer">
             View GitHub
           </a>
-          <a href="https://www.linkedin.com/in/deanna-conti" class="btn btn-ghost" target="_blank" rel="noreferrer">
+          <a href="https://www.linkedin.com/in/deannaconti" class="btn btn-ghost" target="_blank" rel="noreferrer">
             Connect on LinkedIn
           </a>
         </div>
@@ -561,7 +561,7 @@
       <div>
         Contact: 
         <a href="deannamconti@gmail.com">deannamconti@gmail.com</a> ·
-        <a href="https://www.linkedin.com/in/deanna-conti" target="_blank" rel="noreferrer">LinkedIn</a> ·
+        <a href="https://www.linkedin.com/in/deannaconti" target="_blank" rel="noreferrer">LinkedIn</a> ·
         <a href="https://github.com/deannaconti" target="_blank" rel="noreferrer">GitHub</a>
       </div>
     </footer>
